# dis-wagtail-alpha

./: .coveragerc  .dockerignore  .editorconfig  .eslintignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  .secrets.baseline  .stylelintignore  CODEOWNERS  Dockerfile  Makefile  README.md  docker-compose.yml  fabfile.py  gitpod.Dockerfile  gunicorn.conf.py  heroku.yml  jest.config.js  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  tsconfig.json  webpack.config.js
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.gitlab/merge_request_templates/: Default.md
docker/: Makefile  Procfile  bashrc.sh  docker-compose-frontend.yml  postgres-init-dev.sql
docs/: anonymised_data.md  continuous-integration.md  data_protection.md  deployment.md  design-system-overrides.md  index.md  infrastructure.md  project_conventions.md
docs/custom-features/: migration_friendly_streamfields.md
docs/front-end/: placeholder_images.md  tooling.md
ons_alpha/: Makefile  urls.py  wsgi.py
ons_alpha/articles/: apps.py  models.py
ons_alpha/articles/migrations/: 0001_initial.py  0002_articlepage_headline.py
ons_alpha/bulletins/: apps.py  blocks.py  forms.py  models.py  wagtail_hooks.py
ons_alpha/bulletins/migrations/: 0001_initial.py  0002_bulletinpage_body.py  0002_bulletinpage_contact_details_and_more.py  0003_alter_bulletinpage_body.py  0003_bulletinseriespage.py  0003_bulletintopicrelationship.py  0004_bulletinpage_next_release_date_and_more.py  0004_bulletintopicrelationship.py  0005_alter_bulletinpage_body_alter_bulletinpage_updates.py  0005_bulletinpage_release_calendar_page_updated.py  0005_bulletinpage_summary.py  0005_delete_bulletintopicrelationship.py  0006_alter_bulletinpage_updates.py  0006_bulletinpage_headline.py  0007_alter_bulletinpage_body.py  0007_bulletinpage_headline_figures.py
ons_alpha/bundles/: admin_forms.py  admin_urls.py  apps.py  enums.py  forms.py  models.py  notifications.py  panels.py  views.py  viewsets.py  wagtail_hooks.py
ons_alpha/bundles/migrations/: 0001_initial.py  0002_bundle_datasets_delete_bundlelink.py  0002_bundlepages_bundlelinks.py  0003_remove_bundle_collection_reference_and_more.py  0003_remove_bundle_topic.py  0004_bundle_approved_at_bundle_approved_by.py
ons_alpha/charts/: admin_forms.py  admin_views.py  api.py  apps.py  blocks.py  constants.py  models.py  urls.py  utils.py  validators.py  views.py  wagtail_hooks.py
ons_alpha/charts/admin/: filters.py  forms.py  views.py
ons_alpha/charts/migrations/: 0001_initial.py  0002_barchart_show_value_labels_and_more.py  0002_rename_data_barchart_data_manual_and_more.py  0003_barchart_x_type_linechart_x_type_and_more.py  0004_remove_barchart_subtitle_remove_barchart_title_and_more.py  0005_barchart_theme_linechart_theme.py  0006_chart_caption.py  0007_barchart_height_linechart_height.py  0008_barchart_x_tick_interval_barchart_y_tick_interval_and_more.py  0009_remove_chart_acls_last_set_remove_chart_collection_and_more.py  0010_alter_barchart_x_tick_interval_and_more.py  0011_alter_barchart_x_tick_interval_and_more.py  0012_alter_barchart_data_manual_and_more.py  0013_chart_is_template.py  0014_barchart_data_headers_linechart_data_headers.py
ons_alpha/core/: apps.py  blocks.py  constants.py  context_processors.py  forms.py  views.py  wagtail_hooks.py
ons_alpha/core/blocks/: __init__.py  button_link.py  document_list.py  embeddable.py  featured_document.py  headline_figures.py  markup.py  panels.py  related.py  snippets.py  stream_blocks.py
ons_alpha/core/migrations/: 0001_initial.py  0002_contactdetails.py  0002_socialmediasettings_default_sharing_image.py  0003_chart.py  0004_delete_chart.py
ons_alpha/core/models/: __init__.py  base.py  inlines.py  mixins.py  settings.py  snippets.py
ons_alpha/core/templatetags/: tableofcontents.py
ons_alpha/core/tests/: test_context_processors.py
ons_alpha/datasets/: apps.py  blocks.py  models.py  views.py  wagtail_hooks.py
ons_alpha/datasets/migrations/: 0001_initial.py  0002_dataset_namespace_alter_dataset_id_and_more.py
ons_alpha/documents/: apps.py  models.py
ons_alpha/documents/migrations/: 0001_initial.py  0002_customdocument_acls_last_set_and_more.py
ons_alpha/events/: apps.py  models.py
ons_alpha/events/migrations/: 0001_initial.py  0002_remove_eventpagerelatedpage.py  0003_wagtail30_streamfield_use_json_field.py
ons_alpha/events/tests/: test_models.py
ons_alpha/fixtures/core/: demo_data.json
ons_alpha/fixtures/events/: demo_data.json
ons_alpha/fixtures/forms/: demo_data.json
ons_alpha/forms/: apps.py  models.py
ons_alpha/github/: linting.yml  workflows
ons_alpha/home/: apps.py  models.py
ons_alpha/images/: apps.py  models.py  views.py
ons_alpha/inlineindex/: README.md  apps.py  models.py  signal_handlers.py
ons_alpha/jinja2/: base_page.html
ons_alpha/methodologies/: apps.py  models.py
ons_alpha/navigation/: apps.py  models.py
ons_alpha/news/: apps.py  models.py
ons_alpha/people/: apps.py  models.py  wagtail_hooks.py
ons_alpha/private_media/: apps.py  bulk_actions.py  constants.py  forms.py  middleware.py  models.py  signal_handlers.py  utils.py  wagtail_patches.py
ons_alpha/project_styleguide/: apps.py  forms.py
ons_alpha/release_calendar/: apps.py  blocks.py  models.py
ons_alpha/search/: views.py
ons_alpha/settings/: base.py  dev.py  production.py  test.py
ons_alpha/standardpages/: apps.py  blocks.py  factories.py  models.py
ons_alpha/taxonomy/: apps.py  forms.py  models.py  views.py  wagtail_hooks.py
ons_alpha/topics/: models.py
ons_alpha/users/: apps.py  wagtail_hooks.py
ons_alpha/utils/: apps.py  cache.py  db_router.py  elasticache.py  fields.py  forms.py  jinja2tags.py  models.py  query.py  search.py  views.py  wagtail_hooks.py  whitenoise.py
ons_alpha/workflows/: apps.py  models.py  monkey_patches.py  signal_handlers.py  views.py  wagtail_hooks.py
scripts/: finalize_design_system_setup.sh  load_release.sh
(+241 files in other folders)
